[package]
name = "figment_file_env_provider"
version = "0.1.0"
edition = "2021"
authors = ["nitnelave <valentin@tolmer.fr>"]
description = "A Figment provider to read from env or files"
license = "MIT"
keywords = ["figment", "env", "file"]
categories = ["command-line-interface", "config"]
repository = "https://github.com/nitnelave/figment_file_env_provider"
homepage = "https://github.com/nitnelave/figment_file_env_provider"
documentation = "https://docs.rs/figment_file_env_provider"

[dependencies.figment]
version = "*"
features = ["env", "test"]

[dev_dependencies.serde]
version = "*"
features = ["derive"]
